# era5-etl

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  hatch_build.py  pyproject.toml
.claude/: settings.local.json
data-sources/shapefiles/BR_UF_2025/: BR_UF_2025.dbf  BR_UF_2025.shx
docs/superpowers/plans/: 2026-05-16-inventory-controls-and-query-favorites.md  2026-05-29-notebook-cache-and-load-logging.md  2026-05-30-notebook-cache-settings.md
docs/superpowers/specs/: 2026-05-16-inventory-controls-and-query-favorites-design.md  2026-05-29-notebook-cache-and-load-logging-design.md  2026-05-30-notebook-cache-settings-design.md
examples/: README.md  __init__.py  config_advanced.py  config_simple.py  query_examples.py
scripts/: build_grid_membership.py
src/era5_etl/: __init__.py  __main__.py  __version__.py  cli.py  config.py  constants.py  exceptions.py  types.py
src/era5_etl/_data/: era5_variables.yaml
src/era5_etl/_data/ibge/: municipio.csv  pais.csv  rg_imediata.csv  rg_intermediaria.csv  uf.csv
src/era5_etl/_data/notebook_templates/: getting_started.json  xgboost_temperature_forecast.json
src/era5_etl/_data/regions/: grid_membership.parquet
src/era5_etl/core/: __init__.py  context.py  pipeline.py  stage.py
src/era5_etl/datasets/: __init__.py  base.py
src/era5_etl/datasets/era5/: __init__.py  config.py  variables.yaml
src/era5_etl/datasets/era5_land/: __init__.py  config.py  variables.yaml
src/era5_etl/datasets/inmet/: __init__.py  config.py  variables.yaml
src/era5_etl/download/: __init__.py  cds_downloader.py  cds_log_capture.py  grid.py  inmet_portal.py  request_planner.py  size_estimator.py
src/era5_etl/notebooks/: __init__.py  helpers_module.py  kernel_manager.py  kernel_runner.py  templates.py
src/era5_etl/pipeline/: __init__.py  era5_pipeline.py  source_handlers.py
src/era5_etl/regions/: __init__.py  membership.py
src/era5_etl/storage/: __init__.py  comparison.py  coverage.py  duckdb_manager.py  grid_index.py  manifest.py  parquet_manager.py  paths.py  stations.py
src/era5_etl/transform/: __init__.py  inmet_to_parquet.py  netcdf_to_parquet.py
src/era5_etl/utils/: __init__.py  ibge_loader.py  ibge_regions.py  variables.py
src/era5_etl/web/: __init__.py  _types.py  builtin_objects.py  notebook_cache.py  notebook_store.py  prereq.py  query_engine.py  query_store.py  runtime.py  server.py  sql_builder.py  timeseries_sql.py  user_config.py  user_views_store.py
src/era5_etl/web/models/: __init__.py
src/era5_etl/web/routes/: __init__.py  credentials.py  datasets.py  export.py  inmet.py  inventory.py  notebooks.py  pipeline.py  query.py  query_store.py  regions.py  settings.py  stats.py  timeseries.py  user_views.py  version.py
src/era5_etl/web/static/: index.html
src/era5_etl/web/static/assets/: Arrow.dom-BYnZVrdL.js  Arrow.dom-Bu6QSQKt.js  Arrow.dom-Ck18knoj.js  Arrow.dom-CwlDwqp_.js  Arrow.dom-DYF7PDe-.js  Arrow.dom-TSG1-rQ3.js  SqlEditor-B8h72NJ8.js  SqlEditor-B9Rgnmbb.js  SqlEditor-BMtKUuIG.js  SqlEditor-BNaQiAEQ.js  SqlEditor-BSWgVs9g.js  SqlEditor-BbJsz5cM.js  SqlEditor-BbTm2BOE.js  SqlEditor-BjlKsAPI.js  SqlEditor-Bk6OA2fW.js  SqlEditor-BmviJbXx.js  SqlEditor-BshupYAB.js  SqlEditor-BtvCba5m.js  SqlEditor-BtvFqn6L.js  SqlEditor-C7Ql_2pl.js  SqlEditor-CGJkEOYL.js  SqlEditor-CWJsSHIN.js  SqlEditor-CZWmGjWI.js  SqlEditor-CivAleik.js  SqlEditor-CsTaDICR.js  (+117 more)
src/pyera5/: __init__.py  __version__.py  cli.py  config.py  constants.py  exceptions.py  types.py
src/pyera5/core/: __init__.py  context.py  pipeline.py  stage.py
src/pyera5/download/: __init__.py  cds_downloader.py
src/pyera5/pipeline/: __init__.py  era5_pipeline.py
src/pyera5/storage/: __init__.py  data_exporter.py  duckdb_manager.py  parquet_writer.py
src/pyera5/transform/: __init__.py  netcdf_processor.py
tests/: __init__.py  conftest.py  test_cds_log_capture.py  test_cli.py  test_cli_inmet.py  test_comparison_view.py  test_config.py  test_converter.py  test_core.py  test_coverage_index.py  test_datasets_registry.py  test_download.py  test_grid.py  test_ibge_regions.py  test_inmet_converter.py  test_inmet_downloader.py  test_inmet_routes.py  test_inventory_routes.py  test_manifest.py  test_no_comparison.py  test_notebook_cache.py  test_notebook_kernel.py  test_notebook_routes.py  test_notebook_store.py  test_paths.py  test_pipeline_bootstrap.py  test_processor.py  test_query_ddl_creates_user_view.py  test_query_schema.py  test_query_store.py  test_query_timeout_cancel.py  test_query_user_objects.py  test_regions_membership.py  test_request_planner.py  test_request_planner_diff.py  test_size_estimator.py  test_source_dispatch.py  test_sql_builder.py  test_station_index.py  test_stations_year_status.py  (+9 more)
web-ui/: .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web-ui/src/: globals.css  main.tsx  plotly.d.ts  router.tsx
web-ui/src/components/: DatasetCard.tsx  LanguageSwitcher.tsx  Layout.tsx  OnboardingGate.tsx  RunProgress.tsx  SqlEditor.tsx  flags.tsx
web-ui/src/components/inmet/: InmetDownloadFlow.tsx
web-ui/src/components/inventory/: CellDetailPanel.tsx  InventoryMap.tsx  RegionSummaryPanel.tsx  SelectionToolbar.tsx
web-ui/src/components/notebooks/: CellEditor.tsx  CellOutput.tsx  KernelStatusBadge.tsx  ModelRunsPanel.tsx  NotebookPlotly.tsx
web-ui/src/components/query/: QueryBuilderPanel.tsx  QueryTabsBar.tsx  RightSidebar.tsx  SaveObjectDialog.tsx  SchemaSidebar.tsx  SqlPreview.tsx  ViewBuilderModal.tsx
web-ui/src/components/timeseries/: ChartCell.tsx  LocationPicker.tsx  MapPicker.tsx  PlotlyChart.tsx  SeriesEditor.tsx  TraceStylePanel.tsx  stats.ts  transform.ts  types.ts
web-ui/src/hooks/: useLocalStorage.ts
web-ui/src/i18n/: index.ts
web-ui/src/i18n/locales/: en.ts  pt.ts
web-ui/src/lib/: api.ts  format.ts  hours.ts  sql.ts
web-ui/src/pages/: Dashboard.tsx  DownloadWizard.tsx  Inventory.tsx  NotebookEditor.tsx  Notebooks.tsx  Onboarding.tsx  Query.tsx  Settings.tsx  Timeseries.tsx
