[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyera5"
version = "0.1.0"
description = "Pipeline profissional para dados ERA5/ERA5-Land"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Developer", email = "dev@example.com" }
]
keywords = ["era5", "climate", "meteorology", "netcdf", "data-pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",
    "pydantic>=2.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "xarray>=2024.1.0",
    "netCDF4>=1.6.5",
    "cdsapi>=0.6.1",
    "cfgrib>=0.9.10",
    "h5netcdf>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
pyera5 = "pyera5.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pyera5"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
